5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4143/executions/1675_1932.log
== TEST (2019-05-01 14:41:32) 
-- CODE:
a = float(input("Distancia dos olhos 1:"))
b = float(input("Distancia entre o narize o queixo 1:"))
c = float(input("Distancia dos olhos 2:"))
d =  float(input("Distancia entre o nariz e o queixo 2:"))
e = float(input("Distancia dos olhos 3:"))
f=  float(input("Distancia entre o narize o queixo 3:"))
eq1=abs(a/b)
eq2=abs(c/d)
eq3=abs(e/f)
if ((eq1-eq2)<(eq2-eq3)):
-- ERROR:
File "XXXX", line 11
    
                             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 14:41:52) 
-- CODE:
a = float(input("Distancia dos olhos 1:"))
b = float(input("Distancia entre o narize o queixo 1:"))
c = float(input("Distancia dos olhos 2:"))
d =  float(input("Distancia entre o nariz e o queixo 2:"))
e = float(input("Distancia dos olhos 3:"))
f=  float(input("Distancia entre o narize o queixo 3:"))
eq1=abs(a/b)
eq2=abs(c/d)
eq3=abs(e/f)
if ((eq1-eq2)<(eq2-eq3)):
	print(1 "e" 2)
-- ERROR:
File "XXXX", line 11
    print(1 "e" 2)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 14:42:12) 
-- CODE:
a = float(input("Distancia dos olhos 1:"))
b = float(input("Distancia entre o narize o queixo 1:"))
c = float(input("Distancia dos olhos 2:"))
d =  float(input("Distancia entre o nariz e o queixo 2:"))
e = float(input("Distancia dos olhos 3:"))
f=  float(input("Distancia entre o narize o queixo 3:"))
eq1=abs(a/b)
eq2=abs(c/d)
eq3=abs(e/f)
if ((eq1-eq2)<(eq2-eq3)):
	print("1 e 2")
-- OUTPUT:
1 e 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 14:48:10) 
-- CODE:
a = float(input("Distancia dos olhos 1:"))
b = float(input("Distancia entre o narize o queixo 1:"))
c = float(input("Distancia dos olhos 2:"))
d =  float(input("Distancia entre o nariz e o queixo 2:"))
e = float(input("Distancia dos olhos 3:"))
f=  float(input("Distancia entre o narize o queixo 3:"))
eq1=(a/b)
eq2=(c/d)
eq3=(e/f)
if ((abs(eq1-eq2))<(abs(eq2-eq3))):
	print("1 e 2")
elif(abs(eq1-eq3)<(abs(eq2-eq3))):
	print("1 e 3")
else:
	print("1 e 3")
-- OUTPUT:
1 e 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 14:49:52) 
-- CODE:
a = float(input("Distancia dos olhos 1:"))
b = float(input("Distancia entre o narize o queixo 1:"))
c = float(input("Distancia dos olhos 2:"))
d =  float(input("Distancia entre o nariz e o queixo 2:"))
e = float(input("Distancia dos olhos 3:"))
f=  float(input("Distancia entre o narize o queixo 3:"))
eq1=(a/b)
eq2=(c/d)
eq3=(e/f)
if ((abs(eq1-eq2))<(abs(eq2-eq3))):
	print("1 e 2")
elif(abs(eq1-eq3)<(abs(eq2-eq3))):
	print("1 e 3")
else:
	print("2 e 3")
-- OUTPUT:
1 e 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 14:55:04) 
-- CODE:
a = float(input("Distancia dos olhos 1:"))
b = float(input("Distancia entre o narize o queixo 1:"))
c = float(input("Distancia dos olhos 2:"))
d =  float(input("Distancia entre o nariz e o queixo 2:"))
e = float(input("Distancia dos olhos 3:"))
f=  float(input("Distancia entre o narize o queixo 3:"))
eq1=(a/b)
eq2=(c/d)
eq3=(e/f)
if ((abs(eq1-eq2))<(abs(eq2-eq3))):
	print("1 e 2")
elif(abs(eq1-eq3)<(abs(eq2-eq3))):
	print("1 e 3")
else:
	print("2 e 3")
-- OUTPUT:
1 e 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 14:58:48) 
-- CODE:
a = float(input("Distancia dos olhos 1:"))
b = float(input("Distancia entre o narize o queixo 1:"))
c = float(input("Distancia dos olhos 2:"))
d =  float(input("Distancia entre o nariz e o queixo 2:"))
e = float(input("Distancia dos olhos 3:"))
f=  float(input("Distancia entre o narize o queixo 3:"))
eq1=(a/b)
eq2=(c/d)
eq3=(e/f)
if (((abs(eq1-eq2))<(abs(eq2-eq3))):
	print("1 e 2")
elif(abs(eq1-eq3)<(abs(eq2-eq3))):
	print("1 e 3")
else:
	print("2 e 3")
-- ERROR:
File "XXXX", line 10
    if (((abs(eq1-eq2))<(abs(eq2-eq3))):
                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 15:00:37) 
-- CODE:
a = float(input("Distancia dos olhos 1:"))
b = float(input("Distancia entre o narize o queixo 1:"))
c = float(input("Distancia dos olhos 2:"))
d =  float(input("Distancia entre o nariz e o queixo 2:"))
e = float(input("Distancia dos olhos 3:"))
f=  float(input("Distancia entre o narize o queixo 3:"))
eq1=(a/b)
eq2=(c/d)
eq3=(e/f)
if ((abs(eq1-eq2))<(abs(eq2-eq3))):
	print("1 e 2")
elif(abs(eq1-eq3)<(abs(eq2-eq3))):
	print("1 e 3")
else:
	print("2 e 3")
-- OUTPUT:
1 e 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 15:03:05) 
-- CODE:
a = float(input("Distancia dos olhos 1:"))
b = float(input("Distancia entre o narize o queixo 1:"))
c = float(input("Distancia dos olhos 2:"))
d =  float(input("Distancia entre o nariz e o queixo 2:"))
e = float(input("Distancia dos olhos 3:"))
f=  float(input("Distancia entre o narize o queixo 3:"))
eq1=(a/b)
eq2=(c/d)
eq3=(e/f)
if ((abs(eq1-eq2))<(abs(eq2-eq3))):
	print("1 e 2")
elif(abs(eq1-eq3)<(abs(eq2-eq3))):
	print("1 e 3")
else:
	print("2 e 3")
-- EXECUTION TIME:
0.215498
-- TEST CASE 1:
---- input:
6.7
6.3
7.0
4.0
7.0
6.6
---- correct output:
1 e 3
---- user output:
1 e 2
-- TEST CASE 2:
---- input:
1.0
2.0
3.0
6.0
8.0
10.0
---- correct output:
1 e 2
---- user output:
1 e 2
-- TEST CASE 3:
---- input:
20.0
30.0
5.0
10.0
5.0
10.0
---- correct output:
2 e 3
---- user output:
2 e 3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
